# Cryptarithm_Generator

./: CMakeLists.txt  CMakelists.txt  README.md  cryptarithm.cpp  cryptarithm.h  words.txt
memoize/: word_structures.cpp  word_structures.h
src/app/: CMakelists.txt  filebox.cpp  filebox.h  filereadstatus.h  main.cpp  mainwindow.cpp  mainwindow.h  qfinder.cpp  qfinder.h  wordboxbox.cpp  wordboxbox.h
src/backend/: CMakelists.txt  backend.h  finder.cpp  finder.h  new_recurser.cpp  trie.cpp  trie.h
src/cmd/: CMakeLists.txt  cmd_main.cpp
word_lists/: words.txt
